// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField with a label renders the label component above the childen 1`] = `
<styled.div
  inline={true}
>
  <Memo(Label)
    align="left"
    help="Help me!"
    helpId="test-help-id"
    htmlFor="formField"
    inline={true}
    pr={2}
    width={20}
  >
    Name
  </Memo(Label)>
  <input />
</styled.div>
`;

exports[`FormField with fieldHelp and fieldHelpInline=true renders the FieldHelp component below the childen 1`] = `
<styled.div
  inline={true}
>
  <FieldHelp
    labelInline={true}
    labelWidth={20}
  >
    Help me!
  </FieldHelp>
  <input />
</styled.div>
`;

exports[`FormField with fieldHelp default renders the FieldHelp component below the childen 1`] = `
Array [
  <styled.div
    inline={true}
  >
    <input />
  </styled.div>,
  <FieldHelp
    labelInline={true}
    labelWidth={20}
  >
    Help me!
  </FieldHelp>,
]
`;
